Add default UI content to fragments

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">NaturalNet</string>
+
+    <string name="no_warnings">No Warnings Issued</string>
+    <string name="network_status">Network Status</string>
 </resources>
