Click warning fragment to show example warning state

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
 
     <!-- Warning -->
     <string name="no_warnings">No Warnings Issued</string>
+    <string name="warning_received">Warning Issued</string>
 
     <!-- Network -->
     <string name="network_status">Network Status</string>
