--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,11 +8,11 @@
     <!-- Network -->
     <string name="network_status">Network Status</string>
 
-    <string name="great_cellular_status">Great Cellular Signal</string>
-    <string name="good_cellular_status">Good Cellular Signal</string>
-    <string name="moderate_cellular_status">Moderate Cellular Signal</string>
-    <string name="poor_cellular_status">Poor Cellular Signal</string>
-    <string name="no_cellular_status">No Cellular Signal</string>
+    <string name="cellular_status_great">Great Cellular Signal</string>
+    <string name="cellular_status_good">Good Cellular Signal</string>
+    <string name="cellular_status_moderate">Moderate Cellular Signal</string>
+    <string name="cellular_status_poor">Poor Cellular Signal</string>
+    <string name="cellular_status_none">No Cellular Signal</string>
 
     <string name="gps_status">Good GPS Signal</string>
     <string name="net_status">Good Peer Connectivity</string>
