--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,12 @@
     <string name="cellular_status_poor">Poor Cellular Signal</string>
     <string name="cellular_status_none">No Cellular Signal</string>
 
-    <string name="gps_status">Good GPS Signal</string>
+    <string name="gps_status_great">Great GPS Signal</string>
+    <string name="gps_status_good">Good GPS Signal</string>
+    <string name="gps_status_moderate">Moderate GPS Signal</string>
+    <string name="gps_status_poor">Poor GPS Signal</string>
+    <string name="gps_status_none">No GPS Signal</string>
+
     <string name="net_status">Good Peer Connectivity</string>
     <string name="net_connections">- 12 Nodes Connected</string>
 </resources>
