Display warning information with basic styling

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,11 @@
     <string name="no_warnings">No Warnings Issued</string>
     <string name="warning_received">Warning Issued</string>
 
+    <string name="issued_by_label">Issued by:</string>
+    <string name="issue_time_label">Issued at:</string>
+    <string name="warning_magnitude_label">Magnitude:</string>
+    <string name="warning_impact_time_label">Impact time:</string>
+
     <!-- Network -->
     <string name="network_status">Network Status</string>
 
