--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <!-- Warning -->
     <string name="no_warnings">No Warnings Issued</string>
     <string name="warning_received">Warning Issued</string>
+    <string name="warning_nearby">Warning Nearby</string>
 
     <string name="issued_by_label">Issued by:</string>
     <string name="issue_time_label">Issued at:</string>
